--- a/src/main/resources/messages_tr.properties
+++ b/src/main/resources/messages_tr.properties
@@ -2,3 +2,10 @@ todo.is.created = Görev Olusturuldu
 todo.is.updated = Görev Güncellendi
 todo.is.deleted = Görev Silindi
 
+todo.user.created = Kullanici Olusturuldu
+todo.user.updated = Kullanici Güncellendi
+todo.user.deleted = Kullanici Silindi
+
+todo.not.found = Görev Bulunamadi
+
+todo.user.not.found = Kullanici Bulunamadi
